force-app/main/default/objects/CustomerNote__c/CustomerNote__c.object-meta.xml
<CustomObject>
    <description>Objeto responsavel por armazenar as notas de atendimento do cliente</description>
    <label>Nota de Atendimento</label>
    <nameField>
        <displayFormat>NA-{00000000}</displayFormat>
        <label>Nota de Atendimento Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas de Atendimento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>