force-app/main/default/objects/CustomerNote__c/fields/CustomerInteraction__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteraction__c</fullName>
    <label>Customer Interaction</label>
    <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
    <relationshipLabel>Notas de Atendimento</relationshipLabel>
    <relationshipName>Notas_de_Atendimento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>