force-app/main/default/objects/CustomerNote__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridade</label>
    <type>Checkbox</type>
</CustomField>